--- a/dfglab/dfglab.html
+++ b/dfglab/dfglab.html
@@ -192,7 +192,7 @@
                 <a href="https://apps.wildlife.ca.gov/bios?al=ds69&bl=Oceans&dslist=1234&zl=10#msgx">Bios</a>
                 <a href="https://apps.wildlife.ca.gov/bios?tool=cnddbQuick#msgx">CNDDBQuickView</a>
                 <a href="https://apps.wildlife.ca.gov/bios?viewer=fishing#msgx">Fishingview</a>
-                <a href="https://apps.wildlife.ca.gov/rarefind">Rarefind</a>
+                <a href="https://apps.wildlife.ca.gov/rarefind/view/rarefind.aspx">Rarefind</a>
             </h2>
             <h3>
                 Appsdev
@@ -201,7 +201,7 @@
                 <a href="https://appsdev.wildlife.ca.gov/bios6?al=ds26&bl=oceans&dslist=69,1234&zl=10#msgx">Bios6</a>
                 <a href="https://appsdev.wildlife.ca.gov/bios?tool=cnddbQuick#msgx">CNDDBQuickView</a>
                 <a href="https://appsdev.wildlife.ca.gov/bios?viewer=fishing#msgx">Fishing</a>
-                <a href="https://appsdev.wildlife.ca.gov/rarefind">Rarefind</a>
+                <a href="https://appsdev.wildlife.ca.gov/rarefind/view/rarefind.aspx">Rarefind</a>
             </h3>
             <h2>
                 Map
