deanbox mod dfglabhtml

--- a/dfglab/dfglab.html
+++ b/dfglab/dfglab.html
@@ -138,7 +138,7 @@
                     <input type="text" id="ocab" value="">
                 </li>
                 <li>
-                    <a href="https://outlook.office365.com/owa/">Outlook</a>
+                    <a href="https://outlook.office365.com/owa/">Office</a>
                 </li>
                 <li>
                     <a href="https://map.dfg.ca.gov/stats/">ViewerStats</a>
